<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fzt.endurance.MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="0dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lt_tot"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/consumo_h"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/capacityText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center"
                tools:layout_editor_absoluteX="24dp"
                tools:layout_editor_absoluteY="65dp" />

            <EditText
                android:id="@+id/hourlyConsumptionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center"
                tools:layout_editor_absoluteX="24dp"
                tools:layout_editor_absoluteY="172dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/confBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="save"
                android:text="@string/save"
                tools:layout_editor_absoluteX="263dp"
                tools:layout_editor_absoluteY="108dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/serb1spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                tools:layout_editor_absoluteX="294dp"
                tools:layout_editor_absoluteY="215dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="18dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/quarters"
                android:textAlignment="center"
                tools:layout_editor_absoluteX="342dp"
                tools:layout_editor_absoluteY="285dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/serb2spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                tools:layout_editor_absoluteX="270dp"
                tools:layout_editor_absoluteY="262dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="18dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/quarters"
                android:textAlignment="center"
                tools:layout_editor_absoluteX="342dp"
                tools:layout_editor_absoluteY="245dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/fuel_on_board" />

            <TextView
                android:id="@+id/fuelOnBoardText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:textAlignment="center"
                android:textSize="24sp" />

        </LinearLayout>

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/app_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/enduranceHH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:textAlignment="center"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/enduranceMM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:textAlignment="center"
                android:textSize="36sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
